mdapipkg/objects/Contact_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Achievement_Category__c</fullName>
        <formula>TEXT(Achievement__r.Achievement_Type__c)</formula>
        <label>Achievement Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement_Name__c</fullName>
        <formula>Achievement__r.Name__c</formula>
        <label>Achievement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement__c</fullName>
        <label>Achievement</label>
        <referenceTo>Achievement__c</referenceTo>
        <relationshipLabel>Contact Achievements</relationshipLabel>
        <relationshipName>Contact_Achievements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Candidate_Status__c</fullName>
        <label>Candidate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nominated</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Achievements</relationshipLabel>
        <relationshipName>Contact_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Contact Achievements</relationshipLabel>
        <relationshipName>Contact_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This is a text field so that it can be populated from both Contact_Event and Achievement. The name of the Training will be here for easy filtering by one field.</description>
        <inlineHelpText>Training Name</inlineHelpText>
        <label>Achievement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Category__c</fullName>
        <formula>TEXT(Achievement__r.Training_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YPO_Award_Year__c</fullName>
        <label>YPO Award Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2016-2017</fullName>
                </value>
                <value>
                    <fullName>2015-2016</fullName>
                </value>
                <value>
                    <fullName>2014-2015</fullName>
                </value>
                <value>
                    <fullName>2013-2014</fullName>
                </value>
                <value>
                    <fullName>2012-2013</fullName>
                </value>
                <value>
                    <fullName>2011-2010</fullName>
                </value>
                <value>
                    <fullName>2010-2011</fullName>
                </value>
                <value>
                    <fullName>2009-2010</fullName>
                </value>
                <value>
                    <fullName>2008-2009</fullName>
                </value>
                <value>
                    <fullName>2007-2008</fullName>
                </value>
                <value>
                    <fullName>2006-2007</fullName>
                </value>
                <value>
                    <fullName>2005-2006</fullName>
                </value>
                <value>
                    <fullName>2004-2005</fullName>
                </value>
                <value>
                    <fullName>2003-2004</fullName>
                </value>
                <value>
                    <fullName>2002-2003</fullName>
                </value>
                <value>
                    <fullName>2001-2002</fullName>
                </value>
                <value>
                    <fullName>2000-2001</fullName>
                </value>
                <value>
                    <fullName>1999-2000</fullName>
                </value>
                <value>
                    <fullName>1998-1999</fullName>
                </value>
                <value>
                    <fullName>1997-1998</fullName>
                </value>
                <value>
                    <fullName>1996-1997</fullName>
                </value>
                <value>
                    <fullName>1995-1996</fullName>
                </value>
                <value>
                    <fullName>1994-1995</fullName>
                </value>
                <value>
                    <fullName>1993-1994</fullName>
                </value>
                <value>
                    <fullName>1992-1993</fullName>
                </value>
                <value>
                    <fullName>1991-1992</fullName>
                </value>
                <value>
                    <fullName>1990-1991</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Achievement</label>
    <listViews>
        <fullName>All_Awards</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Achievement_Name__c</columns>
        <columns>Achievement__c</columns>
        <columns>Achievement_Category__c</columns>
        <columns>YPO_Award_Year__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact_Achievement__c.Award</value>
        </filters>
        <label>All Awards</label>
    </listViews>
    <listViews>
        <fullName>All_Training</fullName>
        <columns>Contact__c</columns>
        <columns>Achievement_Name__c</columns>
        <columns>NAME</columns>
        <columns>Training_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Event__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact_Achievement__c.Training</value>
        </filters>
        <label>All Training</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Contact Achievement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Achievements</pluralLabel>
    <recordTypes>
        <fullName>Award</fullName>
        <active>true</active>
        <label>Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Achievement_Type_Must_Be_Contact_Or_Both</fullName>
        <active>true</active>
        <description>Achievement Type Must Be Contact Or Both</description>
        <errorConditionFormula>OR(
   ISPICKVAL(Achievement__r.Achievement_Type__c, &quot;Account&quot;),
   ISPICKVAL(Achievement__r.Achievement_Type__c, &quot;&quot;)
   )</errorConditionFormula>
        <errorMessage>The related achievement has a mismatching &quot;Achievement Type&quot; value.  Please navigate to the related achievement record to reset the &quot;Achievement Type&quot; value prior to modifying the contact achievement.</errorMessage>
    </validationRules>
</CustomObject>